DEV: Change notification message to a localizable string

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,3 +1,4 @@
 en:
   theme_metadata:
-    description: "An example theme component to demonstrate how to do some advanced functionality"
+    description: 'An example theme component to demonstrate how to do some advanced functionality'
+  notification_message: 'Collect more badges before the end of this year!'
